<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="220dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/question_notfound"
        android:textSize="25sp"
        android:textStyle="normal"
        android:textColor="@color/brick"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/seleccion_reporte"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/brick"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btnEncontre"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/encotre_m"
        android:textSize="20sp"
        android:background="@drawable/round_button2"/>

    <Button
        android:id="@+id/btnPerdi"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/perdi_m"
        android:textSize="20sp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_button2"/>

</LinearLayout>