<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="280dp"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:text="@string/confirm_logout"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/brick"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:text="@string/cerrar_sesion"
        android:textSize="20sp"
        android:background="@drawable/round_button2"/>

    <Button
        android:id="@+id/btnCancelar"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:text="@string/cancelar"
        android:textSize="20sp"
        android:background="@drawable/round_button2"
        android:layout_marginBottom="30dp"/>



</LinearLayout>