<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_smoak"
    tools:context=".generarReporte">

    <!--LinearLayout que contiene:-->
    <!--ImageButton Regresar (Buscar Mascota)-->
    <!--TextView Configuración General-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal"
        android:background="@color/salmon">
        <!--ImageButton Regresar (Perfil de Usuario)-->
        <ImageButton
            android:id="@+id/btn_Regresar2"
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:background="@android:color/transparent"
            android:scaleType="fitXY"
            android:src="@drawable/regresar" />
        <!--TextView Generar Reporte-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generarReporte"
            android:fontFamily="@font/nexa"
            android:textSize="24sp"
            android:textColor="@color/white_smoak"
            android:layout_marginTop="22dp"
            android:layout_marginLeft="60dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/encabezado1"
        android:textSize="14sp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:id="@+id/nombreP"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/round_text2"
        android:hint="@string/nombre_mascota2"
        android:textSize="12sp"
        android:paddingHorizontal="5dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <EditText
        android:id="@+id/descP"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/round_text2"
        android:hint="@string/descripcion"
        android:textSize="12sp"
        android:paddingHorizontal="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/round_text2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:paddingHorizontal="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/adjuntar_imagen"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/fotoP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/adjuntar_foto"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_text2"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/round_text2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:paddingHorizontal="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ubi_mascota" />

        <EditText
            android:id="@+id/ubicacionP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/donde_encontro"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_text2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/round_text2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:paddingHorizontal="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/calendario"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            />
        <EditText
            android:id="@+id/fechaP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/cuando_perdido"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:focusable="false"
            android:clickable="false"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_text2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/round_text2"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:paddingHorizontal="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/transparent"
            android:src="@drawable/celular"
            android:scaleType="fitCenter"
            android:layout_gravity="center"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/numero_telefono"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/round_text2"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:text="@string/msj_reporte"
        android:textSize="11sp"
        android:textAlignment="center"/>
    
    <Button
        android:id="@+id/btnReportar"
        android:layout_width="150dp"
        android:layout_height="55dp"
        android:text="@string/reportar"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_button2"/>

</LinearLayout>